agregando primeros cabios a HTML home y styles.css junto con normalize.css

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,1 +1,55 @@
-<h1> Página Index </h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="/css/normalize.css" rel="stylesheet">
+    <link href="/css/styles.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <title>Animalandia</title>
+</head>
+<body> 
+    <header>
+        <section><img src="/images/logo.png" class="logo"></section>
+        <section>
+            <button>LOGIN</button>
+            <button>Carrito<i class="fas fa-shopping-cart"></i></button>
+            <button>Registro</button>
+        </section>
+    </header>
+    <main>
+        <h1>En construccion UwU</h1>
+    </main>
+    <footer>
+        <section>
+            <h3>Categorías</h3>
+            <ul>
+                <li>Perros</li>
+                <li>Gatos</li>
+                <li>Aves</li>
+                <li>Reptiles</li>
+                <li>Roedores</li>
+                <li>Peces</li>
+            </ul>
+        </section>
+        <section>
+            <h3>Nosotros</h3>
+            <ul>
+                <li>Contacto</li>
+                <li>Quienes somos?</li>
+                <li>Servicios</li>
+                <li>Nuestro blog</li>
+            </ul>
+        </section>
+        <section>
+            <h3>Redes sociales</h3>
+            <ul>
+                <li>...</li>
+            </ul>
+        </section>
+    </footer>
+</body>
+</html>
