Avance de la página login y agregado de carpeta img

--- a/src/views/detalle.html
+++ b/src/views/detalle.html
@@ -1,1 +1,18 @@
-<h1>Página detalle del producto </h1>
+<!DOCTYPE html>
+<html lang="es">
+    <header>
+        <section>
+            <img src="../images/logo.png" class="logo">
+        </section>
+        <section>
+            <button>LOGIN</button>
+            <button>Carrito<i class="fas fa-shopping-cart"></i></button>
+            <button>Registro</button>
+        </section>
+    </header>
+
+    <main>
+        
+    </main>
+
+</html>
