--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,7 +13,9 @@
 </head>
 <body> 
     <header>
-        <section><img src="/images/logo.png" class="logo"></section>
+        <section>
+            <img src="../images/logo.png" class="logo">
+        </section>
         <section>
             <button>LOGIN</button>
             <button>Carrito<i class="fas fa-shopping-cart"></i></button>
