Se sube detalle.html sin estilos

--- a/src/views/detalle.html
+++ b/src/views/detalle.html
@@ -5,13 +5,126 @@
             <img src="../images/logo.png" class="logo">
         </section>
         <section>
-            <button>LOGIN</button>
-            <button>Carrito<i class="fas fa-shopping-cart"></i></button>
-            <button>Registro</button>
+            <nav>
+                <ul>
+                    <li>Login</li>
+                    <li>Carrito</li>
+                    <li>Registro</li>
+                </ul>
+            </nav>
         </section>
     </header>
 
     <main>
+        <section>
+            <nav>
+                <form>
+                    <select name="categories">
+                        <option value="dogs"> Perros</option>
+                        <option value="cats"> Gatos </option>
+                        <option value="birds"> Aves </option>
+                        <option value="reptiles"> Reptiles </option>
+                        <option value="rodents"> Roedores </option>
+                        <option value="fishes" >Peces</option>
+                    </select>
+
+                    <button type="submit">Buscar</button>
+                </form>
+            </nav>
+        </section>
+
+        <section>
+            <!-- Producto 1-->
+            <article>
+                <h1>Producto</h1>
+                <div>
+                    <img src="" alt="Producto 1 vista 1">
+                    <img src="" alt="Producto 1 vista 2 miniatura">
+                    <img src="" alt="Producto 1 vista 3 miniatura">
+                </div>
+                <h2>Precio:</h2>
+                <p> $$$$$ MXN</p>
+                <p>Opciones</p>
+                <form>
+                    <p>
+                        <select name="option01">
+                            <option value="a">Opción A</option>
+                            <option value="b">Opción B</option>
+                        </select>
+                    </p>
+
+                    <p>Cantidad</p>
+                    <p>
+                        'Imagen -' 
+                        <input type="number" name="qty01" value="qty01">
+                        'Imagen +'
+                    </p>
+                    <button type="submit">Agregar al carrito</button>
+                </form>
+
+                <div>
+                    <h2>Descripción</h2>
+                    <p>Anotar la descripción del producto</p>
+                    <nav>
+                        <ul>
+                            <li> Características </li>
+                            <li> Especificaciones</li>
+                            <li> Instrucciones </li>
+                            <li> Ayuda </li>
+                        </ul>
+                    </nav>
+                    <p>Pormenores</p>
+                </div>
+            </article>
+            <!-- Fin del producto 1-->
+            
+            <!-- Producto 2-->
+            <article>
+                <h1>Producto</h1>
+                <div>
+                    <img src="" alt="Producto 1 vista 1">
+                    <img src="" alt="Producto 1 vista 2 miniatura">
+                    <img src="" alt="Producto 1 vista 3 miniatura">
+                </div>
+                <h2>Precio:</h2>
+                <p> $$$$$ MXN</p>
+                <p>Opciones</p>
+                <form>
+                    <p>
+                        <select name="option01">
+                            <option value="a">Opción A</option>
+                            <option value="b">Opción B</option>
+                        </select>
+                    </p>
+
+                    <p>Cantidad</p>
+                    <p>
+                        'Imagen -' 
+                        <input type="number" name="qty01" value="qty01">
+                        'Imagen +'
+                    </p>
+                    <button type="submit">Agregar al carrito</button>
+                </form>
+
+                <div>
+                    <h2>Descripción</h2>
+                    <p>Anotar la descripción del producto</p>
+                    <nav>
+                        <ul>
+                            <li> Características </li>
+                            <li> Especificaciones</li>
+                            <li> Instrucciones </li>
+                            <li> Ayuda </li>
+                        </ul>
+                    </nav>
+                    <p>Pormenores</p>
+                </div>
+            </article>
+            <!-- Fin del producto 2-->
+
+        </section>
+
+
         
     </main>
 
