--- a/src/views/index.html
+++ b/src/views/index.html
@@ -24,6 +24,7 @@
     </header>
     <main>
         <h1>En construccion UwU</h1>
+        <img src="../images/PortadaMascotas.png" alt="PortadaMascotas">
     </main>
     <footer>
         <section>
