agregando algunos estilos del footer y header

--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -1,3 +1,34 @@
 body {
     font-family: 'Roboto', sans-serif;
+    font-size: 16px;
 }
+
+header, footer{
+    background-color: rgb(2, 0, 119); 
+    color: #fff;
+    padding: 15px;
+}
+li{
+    list-style: none;
+}
+ul {
+    margin-left: 0;
+    padding-left: 0;
+    
+}
+.logo {
+    max-width: 200px;
+}
+.options {
+    display: none;
+}
+footer {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.color2 {color: #9b0800;}
+.color3 {color: #2239b8;}
+.color6{color: rgb(2, 0, 119);}
+.color4 {color: #6b6e75;}
+.color5 {color: #e4e4e4;}
