Header con íconos

--- a/src/views/login.html
+++ b/src/views/login.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <title>Animalandia</title>
+    <script src="https://kit.fontawesome.com/e3af4c66c5.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -69,33 +70,35 @@
         <section>  
             <h1 class="titulosHeader">Categorías</h1>
             <ul>
-                <li><a href="#">Perros</a></li>
-                <li><a href="#">Gatos</a></li>
-                <li><a href="#">Aves</a></li>
-                <li><a href="#">Reptiles</a></li>
-                <li><a href="#">Roedores</a></li>
-                <li><a href="#">Peces</a></li>
+                <li><a href="#"><i class="fas fa-dog"></i>&nbsp; Perros</a></li>
+                <li><a href="#"><i class="fas fa-cat"></i>&nbsp;Gatos</a></li>
+                <li><a href="#"><i class="fas fa-crow"></i>&nbsp;Aves</a></li>
+                <li><a href="#"><img src="../images/tortugaIcono.svg">&nbsp;Reptiles </a></li>
+                <li><a href="#"><img src="../images/ardillaIcono.svg">&nbsp;Roedores </a></li>
+                <li><a href="#"><i class="fas fa-fish"></i>&nbsp;Peces</a></li>
             </ul>
         </section>
         
         <section>
             <h1 class="titulosHeader">Nosotros</h1>
             <ul>
-                <li><a href="#">Contacto</li>
-                <li><a href="#">Quienes somos?</a></li>
-                <li><a href="#">Servicios</a></li>
-                <li><a href="#">Nuestro blog</a></li>
+                <li><a href="#"><i class="fas fa-file-signature"></i> &nbsp;Contacto</li>
+                <li><a href="#"><ion-icon name="people-circle-outline"></ion-icon> &nbsp;¿Quiénes somos?</a></li>
+                <li><a href="#"><ion-icon name="medical-outline"></ion-icon> &nbsp;Servicios</a></li>
+                <li><a href="#"><i class="fas fa-rss-square"></i> &nbsp;Nuestro blog</a></li>
             </ul>
         </section>
         
         <section>
             <h1 class="titulosHeader">Redes sociales</h1>
             <ul>
-                <li><a href="www.facebook.com">Facebook</a></li>
-                <li><a href="www.ywitter.com">Twitter</a></li>
-                <li><a href="web.whatsapp.com">WhatsApp</WhatsApp:w></a></li>
+                <li><a href="www.facebook.com"> <ion-icon name="logo-facebook"></ion-icon> &nbsp; Facebook</a></li>
+                <li><a href="www.twitter.com"><ion-icon name="logo-twitter"></ion-icon> &nbsp; Twitter</a></li>
+                <li><a href="web.whatsapp.com"><ion-icon name="logo-whatsapp"></ion-icon>WhatsApp</WhatsApp></a></li>
             </ul>
         </section>        
     </footer>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script> 
 </body>
 </html>
