--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -117,6 +117,11 @@ footer section ul li a:hover{
 	color: white;
 }
 
+footer ul li img{
+	display: inline;
+	margin: 0;
+}
+
 /*Media query para tablets vertical */
 @media (min-width: 481px) {
 	header nav ul{
