--- a/src/views/carrito.html
+++ b/src/views/carrito.html
@@ -1,1 +1,110 @@
-<h1> Carrito de compras </h1>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <!--<meta http-equiv="X-UA-Compatible" content="IE=edge">-->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!--<link href="..public/css/normalize.css" rel="stylesheet">-->
+        <link href="../public/css/carro.css" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+        <title>Registro</title>
+    </head>
+
+    
+
+    <header>
+        <div class="nav-bar">
+            <img src="../public/images/Imagen1.png" class="logo-carrito">
+          </div>
+          <div class="enlaces">
+            <ul>
+                <li><a href="../views/login.html">Login |</a></li>
+                <li><a href="../views/registro.html">Register |</a></li>
+                <li><a href="../views/carrito.html">Cart</a></li>
+            </ul>
+          </div>
+    </header>
+
+    <body>
+        <h2>Carrito</h2>
+    <main>
+        <section clas="bolsa">
+            <article class="producto">
+                <img src="../public/images/producto_1.jpg" alt="Chamarra negra Bad2Bone" class="product_img">
+                <div class="descripcion-producto">
+                    <p class="descripcion">Bootique Chamarra Negra Bad2Bone</p>
+                    <label class="talla">Talla:</label>
+                    <select name="talla">
+                        <option value="xx-chico">xx-Chico</option>
+                        <option value="x-chico">x-chico</option>
+                        <option value="chico">Chico</option>
+                        <option value="mediano">Mediano</option>
+                        <option value="grande">Grande</option>
+                    </select>
+                </div>
+                <div class="precio-producto">
+                    <p class="precio">$499</p>
+                    <input type="submit" value="-">
+                    <input type="number" value="cantidad">
+                    <input type="submit" value="+">
+                </div>
+            </article>
+
+            <article class="producto">
+                <img src="../public/images/producto_2.jpg" alt="Collar Good2Go Rosa Neon" class="product_img">
+                <div class="descripcion-producto">
+                    <p class="descripcion">Collar Acojinado Reflejante Rosa Neon Good2Go</p>
+                    <label class="talla">Talla:</label>
+                    <select name="talla">
+                        <option value="xx-chico">xx-Chico</option>
+                        <option value="x-chico">x-chico</option>
+                        <option value="chico">Chico</option>
+                        <option value="mediano">Mediano</option>
+                        <option value="grande">Grande</option>
+                    </select>
+                </div>
+                <div class="precio-producto">
+                    <p class="precio">$325</p>
+                    <input type="submit" value="-">
+                    <input type="number" value="cantidad">
+                    <input type="submit" value="+">
+                </div>
+            </article>
+
+            <article class="producto">
+                <img src="../public/images/producto_3.jpg" alt="Correa Good2Go Rosa Neon" class="product_img">
+                <div class="descripcion-producto">
+                    <p class="descripcion">Correa Acojinada Reflejante Rosa Neon Good2Go</p>
+                    <label class="talla">Talla:</label>
+                    <select name="talla">
+                        <option value="xx-chico">xx-Chico</option>
+                        <option value="x-chico">x-chico</option>
+                        <option value="chico">Chico</option>
+                        <option value="mediano">Mediano</option>
+                        <option value="grande">Grande</option>
+                    </select>
+                </div>
+                <div class="precio-producto">
+                    <p class="precio">$439</p>
+                    <input type="submit" value="-">
+                    <input type="number" value="cantidad">
+                    <input type="submit" value="+">
+                </div>
+            </article>
+        </section>
+
+        <section class="resumen">
+            <p class="direccion-envio">Calle Numero CP Ciudad</p>
+            <p class="costo-envio">Gratis</p>
+            <p class="total-envio">Total con envío</p>
+            <p class="total">$1263</p>
+            <input type="submit" value="Comprar">
+        </section>
+    </main>
+    <footer>
+
+    </footer>
+    </body>
+</html>
