--- a/src/views/registro.html
+++ b/src/views/registro.html
@@ -1,3 +1,231 @@
-<h1> Página en construcción</h1>
-<h2> Página para el registro del usuario</h2>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <!--<meta http-equiv="X-UA-Compatible" content="IE=edge">-->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="..public/css/normalize.css" rel="stylesheet">
+        <link href="../public/css/styles.css" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+        <title>Registro</title>
+    </head>
+    
+    <header class="header-registro">
+        <img src="../public/images/Imagen1.png" alt="Logo" class="logo-centrado">
+        <h2>Crear Cuenta</h2>
+    </header>
+    
+    <body>
+        <section class="datos-personales">
+            <h3>Datos Personales</h3>
+            <div>
+                <form action="../public/temp/formulario.txt" method="POST">
+                    <p>
+                        <label for="nombre">Nombre (s):</label>
+                        <br>
+                        <input type="text" id="nombre" name="nombre" required>
+                    </p>
+                    
+                    <p>
+                        <label for="apellidos">Apellidos:</label>
+                        <br>
+                        <input type="text" id="apellidos" name="apellidos" required>
+                    </p>
 
+                    <p>
+                        <label for="nacimiento">Fecha de nacimiento:</label>
+                        <br>
+                        <input type="date" id="nacimiento" name="nacimiento" min="2003-01-01" required>
+                    </p>
+                    
+                    <p>
+                        <label for="email">e-mail:</label>
+                        <br>
+                        <input type="email" id="email" name="email" required>
+                    </p>
+
+                    <p>
+                        <label for="set-password">Contraseña:</label>
+                        <br>
+                        <input type="password" id="set-password" name="setpassword" required>
+                    </p>
+
+                    <p>
+                        <label for="confirm-pass">Confirmar contraseña:</label>
+                        <br>
+                        <input type="password" id="confirm-pass" name="confirm-pass" required>
+                    </p>
+
+                    <p>
+                        <label for="telefono">Teléfono:</label>
+                        <br>
+                        <input type="tel" id="telefono" name="telefono" required>
+                    </p>
+
+                    <p>
+                        <label for="calle">Calle y número:</label>
+                        <br>
+                        <input type="text" id="calle" name="calle" required>
+                    </p>
+
+                    <p>
+                        <label for="colonia">Colonia</label>
+                        <br>
+                        <input type="text" id="colonia" name="colonia" required>
+                    </p>
+
+                    <p>
+                        <label for="cp">Código postal:</label>
+                        <br>
+                        <input type="text" id="cp" name="cp" required>
+                    </p>
+
+                    <p>
+                        <label>País:</label>
+                        <br>
+                        <select name="pais" required>
+                            <option value="mexico">México</option>
+                            <option value="guatemala">Guatemala</option>
+                            <option value="belice">Belice</option>
+                            <option value="salvador">Salvador</option>
+                            <option value="honduras">Honduras</option>
+                            <option value="nicaragua">Nicaragua</option>
+                            <option value="costa-rica">Costa Rica</option>
+                            <option value="panama">Panamá</option>
+                            <option value="Ecuador">Ecuador</option>
+                            <option value="colombia">Colombia</option>
+                            <option value="venezuela">Venezuela</option>
+                        </select>
+                    </p>
+
+                    <p>
+                        <label>Estado:</label>
+                        <br>
+                        <select name="estado" required>
+                            <option value="aguascalientes">Aguascalientes</option>
+                            <option value="bcn">Baja California Norte</option>
+                            <option value="bcs">Baja California Sur</option>
+                            <option value="campeche">Campeche</option>
+                            <option value="coahuila">Coahuila</option>
+                            <option value="colima">Colima</option>
+                            <option value="chiapas">Chiapas</option>
+                            <option value="chihuahua">Chihuahua</option>
+                            <option value="durango">Durango</option>
+                            <option value="df">Distrito Federal</option>
+                            <option value="guanajuato">Guanajuato</option>
+                            <option value="guerrero">Guerrero</option>
+                            <option value="hidalgo">Hidalgo</option>
+                            <option value="jalisco">Jalisco</option>
+                            <option value="cdmx">CDMX</option>
+                            <option value="morelos">Morelos</option>
+                            <option value="nayarit">Nayarit</option>
+                            <option value="nl">Nuevo León</option>
+                            <option value="oaxaca">Oaxaca</option>
+                            <option value="puebla">Puebla</option>
+                            <option value="queretaro">Querétaro</option>
+                            <option value="quintantaroo">Quintana Roo</option>
+                            <option value="slp">San Luis Potosí</option>
+                            <option value="sonora">Sonora</option>
+                            <option value="tabasco">Tabasco</option>
+                            <option value="tamaulipas">Tamaulipas</option>
+                            <option value="tlaxcala">Tlaxcala</option>
+                            <option value="veracruz">Veracruz</option>
+                            <option value="yucatan">Yucatán</option>
+                            <option value="zacatecas">Zacatecas</option>
+                        </select>
+                    </p>
+
+                    <p>
+                        <label>Municipio:</label>
+                        <br>
+                        <select name="municipio" required>
+                            <option value="amealco">Amealco de Bonfil</option>
+                            <option value="arroyo">Arroyo Seco</option>
+                            <option value="cadereyta">Cadereyta de Montes</option>
+                            <option value="colon">Colón</option>
+                            <option value="corregidora">Corregidora</option>
+                            <option value="marques">El Marqués</option>
+                            <option value="ezequiel">Ezequiel Montes</option>
+                            <option value="humilpan">Huimilpan</option>
+                            <option value="jalpan">Jalpan de Serra</option>
+                            <option value="escobedo">Pedro Escobedo</option>
+                            <option value="penamiller">Peñamiller</option>
+                            <option value="pinal">Pinal de Amoles</option>
+                            <option value="san-joaquin">San Joaquin</option>
+                            <option value="sjr">San Juan del Río</option>
+                            <option value="tequisquiapan">Tequisquiapan</option>
+                            <option value="toliman">Tolimán</option>
+                        </select>
+                    </p>
+                
+                </form>
+            </div>
+        </section>
+
+        <section class="datos-mascota">
+            <h3>Datos de tu Mascota</h3>
+            <div>
+                <form>
+                    <p>
+                        <label>Especie:</label>
+                        <br>
+                        <select name="especie">
+                            <option value="canino">Canino</option>
+                            <option value="felino">Felino</option>
+                            <option value="ave">Ave</option>
+                            <option value="reptil">Reptil</option>
+                            <option value="roedor">Roedor</option>
+                        </select>
+                    </p>
+
+                    <p>
+                        <label>Raza:</label>
+                        <br>
+                        <select name="raza">
+                            <option value="pastor-aleman">Pastor Alemán</option>
+                            <option value="labrador-retriever">Labrador Retirever</option>
+                            <option value="pomerania">Pomerania</option>
+                            <option value="husky">Husky Siberiano</option>
+                            <option value="golden">Golden Retriever</option>
+                            <option value="poodle">Poodle</option>
+                            <option value="chihuahua">Chihuahua</option>
+                            <option value="pug">Pug</option>
+                            <option value="dachshund">Dachshund</option>
+                        </select>
+                    </p>
+
+                    <p>
+                        <label for="nombre-mascota">Nombre:</label>
+                        <br>
+                        <input type="text" id="nombre-mascota" name="nombre-mascota">
+                    </p>
+
+                    <p>
+                        <label for="nacimiento-mascota">Fecha de nacimiento:</label>
+                        <br>
+                        <input type="date" id="nacimiento-mascota" name="nacimiento-mascota">
+                    </p>
+
+                    <p>
+                        <label>
+                            <input type="radio" name="terminos" value="acepta-terminos" required>
+                            Acepto los términos y condiciones
+                        </label>
+                    </p>
+
+                    <p>
+                        <label>
+                            <input type="checkbox" name="publicidad" value="acepta-publicidad">
+                            Deseo recibir ofertas y publicidad a mi correo electrónico
+                        </label>
+                    </p>
+                    
+                    <input type="submit" value="Enviar">
+                </form>
+            </div>
+        </section>
+    </body>
+
+</html>
