--- a/src/views/index.html
+++ b/src/views/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/css/normalize.css" rel="stylesheet">
     <link href="/css/styles.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/ed17535c69.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
@@ -13,19 +14,83 @@
 </head>
 <body> 
     <header>
-        <section>
-            <img src="../images/logo.png" class="logo">
-        </section>
-        <section>
-            <button>LOGIN</button>
-            <button>Carrito<i class="fas fa-shopping-cart"></i></button>
-            <button>Registro</button>
-        </section>
+        <div class="header-top">
+            <section class="logo-container">
+                <img src="../images/logo.png" class="logo" alt="Logo">
+            </section>
+            <div class="alimentos">
+                <ul>
+                  <li>
+                    <a href="#">Alimentos   <i class="fas fa-caret-up"></i></a>
+                    <ul>
+                      <li><a href="#">Link 1</a></li>
+                      <li><a href="#">Link 2</a></li>
+                      <li><a href="#">Link 3</a></li>
+                    </ul>
+                  </li>
+                </ul>
+              </div>
+              <div class="accesorios">
+                <ul>
+                  <li>
+                    <a href="#">Accesorios   <i class="fas fa-caret-up"></i></a>
+                    <ul>
+                      <li><a href="#">Link 1</a></li>
+                      <li><a href="#">Link 2</a></li>
+                      <li><a href="#">Link 3</a></li>
+                    </ul>
+                  </li>
+                </ul>
+              </div>
+              <div class="viviendas">
+                <ul>
+                  <li>
+                    <a href="#">Viviendas   <i class="fas fa-caret-up"></i></a>
+                    <ul>
+                      <li><a href="#">Link 1</a></li>
+                      <li><a href="#">Link 2</a></li>
+                      <li><a href="#">Link 3</a></li>
+                    </ul>
+                  </li>
+                </ul>
+              </div>
+              <div class="otros">
+                <ul>
+                  <li>
+                    <a href="#">Otros   <i class="fas fa-caret-up"></i></a>
+                    <ul>
+                      <li><a href="#">Link 1</a></li>
+                      <li><a href="#">Link 2</a></li>
+                      <li><a href="#">Link 3</a></li>
+                    </ul>
+                  </li>
+                </ul>
+              </div>
+                    
+        </div>
+            
+
+        <nav>
+            <ul>
+                <li><a href="/">Home </a> </li>
+                <li><a href="/carrito"> Carrito</a>  </li>
+                <li><a href = "/login"> Login</a> </li>
+                <li><a href="/registro"> Registro</a> </li>
+            </ul>
+        </nav>
     </header>
+
     <main>
         <h1>En construccion UwU</h1>
+        <section></section>
+        <article></article>
         <img src="../images/PortadaMascotas.png" alt="PortadaMascotas">
+
+        <img src="../images/croquetas.jfif"alt="producto-1">
+
+        <img src="../images/croquetas2.jfif" alt="producto 2">
     </main>
+
     <footer>
         <section>
             <h3>Categorías</h3>
@@ -51,6 +116,21 @@
             <h3>Redes sociales</h3>
             <ul>
                 <li>...</li>
+            </ul>
+        </section>
+        <section>
+            <form method="GET">
+                <label for="registro-footer" class="registro footer">
+                    <h3>Registrate</h3>
+                    <input type="text" placeholder="correo-elecro@yeah.com">
+                </label>
+            </form>
+        </section>
+        <section>
+            <h3>Servicio al cliente</h3>
+            <ul>
+                <li>Seguimiento de pedidos</li>
+                <li>Quejas y sugerencias</li>
             </ul>
         </section>
     </footer>
